Fixed delete3DLabel native.

--- a/Client/Core/Client.Core.vcxproj
+++ b/Client/Core/Client.Core.vcxproj
@@ -126,6 +126,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="AimSync.h" />
+    <ClInclude Include="C3DLabels.h" />
     <ClInclude Include="CAudioManager.h" />
     <ClInclude Include="CClient.h" />
     <ClInclude Include="CFileTransferManager.h" />
