--- a/Server/Core/makefile
+++ b/Server/Core/makefile
@@ -1,12 +1,12 @@
 CC=g++
-CFLAGS=-m32 -c -g -w -D_SERVER -D_LINUX -I../../Shared -I../../Vendor/Squirrel -I../../Vendor/ -I.
+CFLAGS=-m32 -c -g -w -shared -D_SERVER -D_LINUX -I../../Shared -I../../Vendor/Squirrel -I../../Vendor/ -I.
 SOURCES=$(wildcard *.cpp)
 SOURCES+=$(wildcard ../../Vendor/tinyxml/*.cpp)
 SOURCES+=$(wildcard Natives/*.cpp)
 SOURCES+=$(wildcard ../../Shared/Scripting/Natives/*.cpp)
 SOURCES+=../../Shared/Scripting/CScriptTimer.cpp ../../Shared/Scripting/CScriptTimerManager.cpp ../../Shared/Scripting/CScriptingManager.cpp ../../Shared/CXML.cpp ../../Shared/SharedUtility.cpp ../../Shared/Scripting/CSquirrel.cpp ../../Shared/CSQLite.cpp ../../Shared/Scripting/CSquirrelArguments.cpp ../../Shared/Game/CTrafficLights.cpp ../../Shared/Game/CTime.cpp
 SOURCES+=$(wildcard ../../Shared/Network/*.cpp) ../../Shared/CLibrary.cpp ../../Shared/CString.cpp ../../Shared/Threading/CThread.cpp ../../Shared/Threading/CMutex.cpp ../../Shared/CLogFile.cpp ../../Shared/Game/CControlState.cpp
-SOURCES+=$(wildcard ../../Vendor/md5/*.cpp) ../../Shared/CSettings.cpp ../../Shared/CExceptionHandler..cpp ../../Shared/CEvents.cpp ../../Shared/Linux.cpp $(wildcard ModuleNatives/*.cpp)
+SOURCES+=$(wildcard ../../Vendor/md5/*.cpp) ../../Shared/CSettings.cpp ../../Shared/CExceptionHandler.cpp ../../Shared/CEvents.cpp ../../Shared/Linux.cpp $(wildcard ModuleNatives/*.cpp)
 OBJECTS=$(SOURCES:.cpp=.o)
 EXECUTABLE=../../Binary/Server.Core.so
 
