Reenabled the network module error messages. Added some more stuff to game structures. Moved gtaiv math structures to IVCommon.h. Reverted changes to VehicleNatives.cpp. Cleaned up some code. Added code for loading fonts from windows directory to CGUI::GetFont.

--- a/Server/Launcher/makefile
+++ b/Server/Launcher/makefile
@@ -1,18 +1,21 @@
 CC=g++
-CFLAGS=-m32 -c -Wall -g -D_SERVER -I. -I../../Shared -D_LINUX
-LDFLAGS=-lpthread -ldl
+CFLAGS=-c -Wall -D_SERVER -D_LINUX -w -I../../Shared -I.
 SOURCES=$(wildcard *.cpp)
-SOURCES+=$(wildcard ../../Shared/Threading/*.cpp) ../../Shared/CString.cpp ../../Shared/CLibrary.cpp ../../Shared/SharedUtility.cpp ../../Shared/Linux.cpp
+SOURCES+=../../Shared/CString.cpp ../../Shared/CMutex.cpp ../../Shared/CLibrary.cpp ../../Shared/SharedUtility.cpp ../../Shared/CThread.cpp
 OBJECTS=$(SOURCES:.cpp=.o)
 EXECUTABLE=../../Binary/ivmp-svr
+PCH=StdInc.h
 
-all: $(SOURCES) $(EXECUTABLE)
+all: $(PCH) $(SOURCES) $(EXECUTABLE)
 
 $(EXECUTABLE): $(OBJECTS) 
-	g++ -m32 -o $@ $(OBJECTS) $(LDFLAGS)
+        g++ $(OBJECTS) -lpthread -ldl -o $@ 
 
 .cpp.o:
-	$(CC) $(CFLAGS) $< -o $@
+        $(CC) $(CFLAGS) $< -o $@
+
+pch:
+        $(CC) $(CFLAGS) $(PCH) -o $(PCH).gch
 
 clean:
-	rm -Rf $(OBJECTS) $(EXECUTABLE)
+        rm -Rf $(OBJECTS) $(EXECUTABLE)
