--- a/Server/Launcher/makefile
+++ b/Server/Launcher/makefile
@@ -1,7 +1,7 @@
 CC=g++
-CFLAGS=-c -Wall -D_SERVER -D_LINUX -w -I../../Shared -I.
+CFLAGS=-m32 -c -Wall -D_SERVER -D_LINUX -w -I../../Shared -I.
 SOURCES=$(wildcard *.cpp)
-SOURCES+=../../Shared/CString.cpp ../../Shared/CMutex.cpp ../../Shared/CLibrary.cpp ../../Shared/SharedUtility.cpp ../../Shared/CThread.cpp
+SOURCES+=../../Shared/CString.cpp ../../Shared/Threading/CMutex.cpp ../../Shared/CLibrary.cpp ../../Shared/SharedUtility.cpp ../../Shared/Threading/CThread.cpp
 OBJECTS=$(SOURCES:.cpp=.o)
 EXECUTABLE=../../Binary/ivmp-svr
 PCH=StdInc.h
@@ -9,13 +9,13 @@ PCH=StdInc.h
 all: $(PCH) $(SOURCES) $(EXECUTABLE)
 
 $(EXECUTABLE): $(OBJECTS) 
-        g++ $(OBJECTS) -lpthread -ldl -o $@ 
+		g++ $(OBJECTS) -m32 -lpthread -ldl -o $@ 
 
 .cpp.o:
-        $(CC) $(CFLAGS) $< -o $@
+		$(CC) $(CFLAGS) $< -o $@
 
 pch:
-        $(CC) $(CFLAGS) $(PCH) -o $(PCH).gch
+		$(CC) $(CFLAGS) $(PCH) -o $(PCH).gch
 
 clean:
-        rm -Rf $(OBJECTS) $(EXECUTABLE)
+		rm -Rf $(OBJECTS) $(EXECUTABLE)
